# mini_rs_erp

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
deploy/systemd/: mini-rs-erp-native-postgres.env.example  mini-rs-gateway.service
docs/architecture/: terminology.md
docs/benchmarks/: 2026-05-14-go-vs-rust.md  2026-05-15-final-go-vs-rust-production-battle.md  2026-05-15-go-vs-rust-lmdb-default-battle.md
docs/deploy/: android-apk-updates.md  pingora-native-postgres-fedora.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
migrations/postgres/: 0001_mini_erp_foundation.sql  0002_order_integrity.sql  0003_erp_data_integrity.sql  0004_system_users.sql  0005_chat.sql  0006_boyoqchi_returned_paint.sql  0007_runtime_table_ownership.sql  0008_returned_paint_calculations.sql  0009_returned_paint_solvent_calculations.sql  0010_returned_paint_image_workflow.sql  0011_chat_media_foundation.sql  0012_chat_media_v1.sql  0013_chat_media_incident_video.sql  0014_raw_material_stock_corrections.sql  0015_item_identity_updates.sql  0016_chat_delivery_reliability.sql  0017_chat_delivery_reliability_followup.sql  0018_item_master_without_warehouse.sql  0019_chat_voice_messages.sql  0020_worker_identity_lifecycle.sql  0021_rps_batch_history.sql  0022_rps_batch_codes.sql  0023_qolip_13_rows.sql  0024_qolip_legacy_lookup_index.sql  0025_order_control_state.sql  0026_order_freeze_request_chat_cards.sql
src/: app.rs  app_local_store.rs  app_tests.rs  architecture_checks.rs  config.rs  error.rs  fcm.rs  fcm_tests.rs  gateway_config.rs  gateway_config_tests.rs  google_sheets.rs  lib.rs  main.rs
src/ai/: mod.rs  werka_search.rs
src/app/: admin_catalog_overlay.rs  admin_catalog_overlay_writes.rs  builders.rs  order_sheets.rs  postgres_pool.rs  unavailable_production_map_store.rs
src/config/: tests.rs
src/core/: apparatus_groups.rs  authz.rs  authz_catalog.rs  authz_tests.rs  backup_doctor.rs  calculate_orders.rs  formula.rs  formula_tests.rs  mini_orders.rs  mobile_release.rs  mod.rs  qolip.rs  quantity.rs  returned_paint.rs  returned_paint_calculations.rs  returned_paint_inline_tests.rs  returned_paint_stores.rs  system_users.rs  warehouse_events.rs  warehouses.rs  warehouses_memory_store.rs  worker_groups.rs  workers.rs
src/db/: mod.rs  (+21 more)
tests/: chat_reliability.rs  chat_voice_media.rs  rps_batch_codes.rs
tools/iroh_erp_agent/: Cargo.toml
tools/iroh_erp_agent/src/: main.rs
(+493 files in other folders)
