[package]
name = "mini_rs_erp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Accord mini ERP core service."
repository = "https://github.com/WIKKIwk/mini_rs_erp"
readme = "README.md"

[[bin]]
name = "mini_rs_gateway"
path = "src/bin/mini_rs_gateway.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
async-stream = "0.3"
futures-core = "0.3"
async-trait = "0.1"
aes = "0.8"
base64 = "0.22"
bincode = "1.3"
bytes = "1"
cbc = { version = "0.1", features = ["alloc"] }
data-encoding = "2"
dotenvy = "0.15"
hmac = "0.12"
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["service", "tokio"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jsonwebtoken = "9"
pingora = { version = "0.8.1", features = ["proxy", "rustls"] }
pingora-core = { version = "0.8.1", features = ["rustls"] }
pingora-http = "0.8.1"
pingora-proxy = { version = "0.8.1", features = ["rustls"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = "0.6"
sqlx = { version = "0.8", default-features = false, features = ["derive", "mysql", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "fs", "io-util", "process", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
heed = "0.22.1"
rusqlite = { version = "0.32", features = ["bundled", "collation"] }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
