[package]
name = "iroh_erp_agent"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
iroh = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
